--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
+    "vue-router": "^4.3.2",
     "vue3-telegram-login": "^1.1.0"
   },
   "devDependencies": {
